force-app/main/default/objects/CoverageType/CoverageType.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>