force-app/main/default/objects/CoverageType/fields/Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Aggregate__c</fullName>
    <inlineHelpText>Aggregate of product option</inlineHelpText>
    <label>Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>