force-app/main/default/objects/CoverageType/fields/Authorized_Sub_Limits__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Sub_Limits__c</fullName>
    <inlineHelpText>Authorized sub-limit of product option</inlineHelpText>
    <label>Authorized Sub-Limits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>