force-app/main/default/objects/CoverageType/fields/Co_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Co_Insurance__c</fullName>
    <inlineHelpText>Co-Insurance percentage of product option</inlineHelpText>
    <label>Co-Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>