force-app/main/default/objects/CoverageType/fields/Coverage_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Name__c</fullName>
    <inlineHelpText>Name of coverage</inlineHelpText>
    <label>Coverage Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>