force-app/main/default/objects/CoverageType/fields/Deductible_Days__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Days__c</fullName>
    <inlineHelpText>Deductible days of a product option</inlineHelpText>
    <label>Deductible Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>