force-app/main/default/objects/CoverageType/fields/General_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>General_Aggregate__c</fullName>
    <label>General Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>