force-app/main/default/objects/CoverageType/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent coverage record of this coverage</inlineHelpText>
    <label>Parent Product</label>
    <referenceTo>CoverageType</referenceTo>
    <relationshipLabel>Product Options</relationshipLabel>
    <relationshipName>Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>