force-app/main/default/objects/CoverageType/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <inlineHelpText>Rate applied on product option</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>