force-app/main/default/objects/CoverageType/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <inlineHelpText>Retention of coverage</inlineHelpText>
    <label>Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>