force-app/main/default/objects/CoverageType/fields/Separate__c.field-meta.xml
<CustomField>
    <fullName>Separate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if premium will apply separately on a coverage</inlineHelpText>
    <label>Separate</label>
    <type>Checkbox</type>
</CustomField>