force-app/main/default/objects/CoverageType/fields/Sub_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sub_Limit__c</fullName>
    <inlineHelpText>Sub-limit of a product option</inlineHelpText>
    <label>Sub-Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>