force-app/main/default/objects/CoverageType/listViews/All_Coverage.listView-meta.xml
<ListView>
    <fullName>All_Coverage</fullName>
    <columns>Name</columns>
    <columns>Policy_Limit__c</columns>
    <columns>Coverage_Name__c</columns>
    <columns>Category</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category</field>
        <operation>equals</operation>
        <value>Coverage</value>
    </filters>
    <label>All Coverages</label>
</ListView>