force-app/main/default/objects/CoverageType/listViews/All_CoverageTypes.listView-meta.xml
<ListView>
    <fullName>All_CoverageTypes</fullName>
    <columns>Name</columns>
    <columns>CategoryGroup</columns>
    <columns>DeductibleAmount</columns>
    <columns>PremiumAmount</columns>
    <columns>LimitAmount</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Options</label>
</ListView>