force-app/main/default/objects/CoverageType/listViews/All_Extentions.listView-meta.xml
<ListView>
    <fullName>All_Extentions</fullName>
    <columns>Name</columns>
    <columns>CategoryGroup</columns>
    <columns>EffectiveDate</columns>
    <columns>ExpirationDate</columns>
    <filterScope>Mine</filterScope>
    <label>All Extentions</label>
</ListView>