force-app/main/default/objects/CoverageType/listViews/All_Sub_Limits.listView-meta.xml
<ListView>
    <fullName>All_Sub_Limits</fullName>
    <columns>Name</columns>
    <columns>CategoryGroup</columns>
    <columns>EffectiveDate</columns>
    <columns>ExpirationDate</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Category</field>
        <operation>equals</operation>
        <value>Sub-limit</value>
    </filters>
    <label>All Sub Limits</label>
</ListView>