force-app/main/default/objects/CoverageType/listViews/Commercial_Lines.listView-meta.xml
<ListView>
    <fullName>Commercial_Lines</fullName>
    <columns>Name</columns>
    <columns>Policy_Limit__c</columns>
    <columns>Rate__c</columns>
    <columns>Co_Insurance__c</columns>
    <columns>Sub_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Commercial Lines</label>
</ListView>