force-app/main/default/objects/CoverageType/listViews/Financial_Lines.listView-meta.xml
<ListView>
    <fullName>Financial_Lines</fullName>
    <columns>Name</columns>
    <columns>Policy_Limit__c</columns>
    <columns>Retention__c</columns>
    <columns>Separate__c</columns>
    <columns>DeductibleAmount</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>Financial Lines</value>
    </filters>
    <label>All Financial Lines</label>
</ListView>