force-app/main/default/objects/CoverageType/listViews/List_view_for_Commercial_Line.listView-meta.xml
<ListView>
    <fullName>List_view_for_Commercial_Line</fullName>
    <columns>Name</columns>
    <columns>CategoryGroup</columns>
    <columns>EffectiveDate</columns>
    <columns>ExpirationDate</columns>
    <filterScope>Mine</filterScope>
    <label>List view for Commercial Line</label>
</ListView>