force-app/main/default/objects/CoverageType/listViews/Professional_Lines.listView-meta.xml
<ListView>
    <fullName>Professional_Lines</fullName>
    <columns>Name</columns>
    <columns>Policy_Limit__c</columns>
    <columns>Aggregate__c</columns>
    <columns>DeductibleAmount</columns>
    <filterScope>Everything</filterScope>
    <label>Professional Lines</label>
</ListView>